--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,102 @@
 * {
     font-family: 'Orbitron', monospace, sans-serif;
+    color: white;
 }
 
-/* body {
-    background-color: "Astronomy Photo Of The Day"
+body {
+    background-image: url(images/background1.jpg);
+    background-size: fit-content;
+}
+
+/* .pickZod {
+    margin-left: 20%;
 } */
+
+.container {
+    margin-top: 8%;
+}
+
+.container img {
+    transform: scale(1.3);
+}
+
+.sun-desc {
+    display: none;
+}
+
+.zodiac-desc {
+    display: none;
+}
+
+#cntr-img {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 100%;
+}
+
+.zodiacs {
+    position: absolute;
+    top: 32%;
+    left: 15.5%;
+    
+}
+
+.zodiac-img {
+    position: absolute;
+    width: 50%;
+}
+
+.zodiac-img:nth-child(1) {
+    transform: rotate(30deg) translateY(-100%);
+    
+}
+
+.zodiac-img:nth-child(2) {
+    transform: rotate(60deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(3) {
+    transform: rotate(90deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(4) {
+    transform: rotate(120deg) translateY(-100%); 
+}
+
+.zodiac-img:nth-child(5) {
+    transform: rotate(150deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(6) {
+    transform: rotate(180deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(7) {
+    transform: rotate(210deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(8) {
+    transform: rotate(240deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(9) {
+    transform: rotate(270deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(10) {
+    transform: rotate(300deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(11) {
+    transform: rotate(330deg) translateY(-100%);
+}
+
+.zodiac-img:nth-child(12) {
+    transform: rotate(360deg) translateY(-100%);
+}
+
+.zodiac-img img{
+    display: flex;
+    width: 8%;  
+}
