--- a/assets/user-creation.css
+++ b/assets/user-creation.css
@@ -1,5 +1,6 @@
 body {
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: 'Orbitron', monospace, sans-serif;
   }
