nasa background script fully functional! created a variable to pull images from objects into one array using map. created a loading function to hide when script runs. updated html to add divs to run these functions. started some styling in css

--- a/assets/user-creation.css
+++ b/assets/user-creation.css
@@ -1,6 +1,19 @@
 body {
+    background-image: url("https://i.gifer.com/3QAe.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: 'Orbitron', monospace, sans-serif;
+  }
+
+  .loader-hidden {
+    font-size: 60px;
+    color: white;
+    text-align: center;
+    display: none;
+    margin: 20%;
+  }
+
+  .all-content-hider {
+    display: none;
   }
