--- a/assets/bigbang.css
+++ b/assets/bigbang.css
@@ -4,6 +4,9 @@ html {
     color: white;
     background-color: black;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .title {
@@ -29,14 +32,22 @@ h1 {
 .content {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-content: center;
     margin: 20px;
+}
+
+.tagline {
+    color: rgb(32, 255, 3);
+    font-size: 16px;
+    font-style: oblique;
 }
 
 ol {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -54,10 +65,31 @@ li {
     0 0 151px rgb(245, 242, 244);
     border-radius: 15px;
     margin: 10px;
-    padding: 20px;
-    width: 150px;
+    padding: 10px;
+    width: 160px;
     height: auto;
 }
+
+h3 {
+    color: rgb(78, 5, 68);
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#cocktail-image {
+    width: 100%;
+}
+
+img {
+    width: 100%;
+}
+
+p {
+    color: black;
+    font-size: 10px;
+}
+
 
 .navigate {
     margin: 40px;
@@ -71,6 +103,7 @@ a {
     color: white;
     font-weight: bold;
     text-decoration: none;
+    font-size: 16px;
 }
 
 a:hover {
@@ -78,8 +111,7 @@ a:hover {
   }
 
 
-footer {
-    position: fixed;
+.footer {
     left: 0;
     bottom: 0;
     width: 100%;
@@ -88,3 +120,23 @@ footer {
     text-align: center;
 }
 
+/* Tablets */
+@media screen and (max-width: 992px) {
+    main {
+        margin: 5px;
+    }
+  }
+
+ /* Large smartphones */
+ @media screen and (max-width: 768px) {
+    main {
+        margin: 2px;
+    }
+  }
+
+   /* Small smartphones */
+   @media screen and (max-width: 576px) {
+    main {
+        margin: 2px;
+    }
+}
