more styling user creations

--- a/creation/creation.css
+++ b/creation/creation.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     font-family: 'Orbitron', monospace, sans-serif;
 }
 
@@ -51,4 +51,4 @@ header {
 }
 .bottom {
     padding-top: 100px;
-}
+} */
