--- a/assets/user-creation.css
+++ b/assets/user-creation.css
@@ -10,6 +10,7 @@ body {
     background-attachment: fixed;
   }
 
+
 .title h1 {
   text-shadow: 1px 3px rgb(203, 203, 56);
 }
@@ -23,14 +24,54 @@ body {
   }
 
   #all-content-hider {
+    border-radius: 20%;
+    animation: glowing 2s;
     display: none;
   }
 
 #created-name {
-  text-shadow: 1px 2px rgb(255, 255, 0);
+  color: #e1ff00;
+  text-shadow: 1px 2px #8800ff;
+}
+
+.name-img {
+  border-radius: 20%;
+  margin: 5vh;
+  animation: pulse 5s infinite;
+}
+
+#cocktail-picture img {
+  border: solid #8800ff10;
+  border-radius: 20%;
+  padding: 5%;
+  background: #e1ff0020;
 }
 
 #user-horo {
   background-color: wheat;
 }
+
+.ins-rec {
+  margin-top: 5%;
+}
+
+@keyframes glowing {
+  0% { box-shadow: inset 3000px 0 5px #fbff00; }
+  50% { box-shadow: inset 0 0 20px #e2ed6c; }
+  100% { box-shadow: inset 0 0 1px #fff; }
+}
+
+@keyframes pulse {
+  0% { outline: solid 30px #00ffea95; }
+
+  25% { outline: solid 25px #00c8ff95; } 
+
+  50% { outline: solid 20px #00e5ff95; }
+
+  75% { outline: solid 25px #00ffdd95; } 
+
+  100% { outline: solid 30px #00ffea95; }
+}
+
+
 
