--- a/assets/user-creation.css
+++ b/assets/user-creation.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    /* background-image: url("https://i.gifer.com/3QAe.gif"); */
+    background-image: url("https://i.gifer.com/3QAe.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -24,9 +24,9 @@ body {
   }
 
   #all-content-hider {
+    display: none;
     border-radius: 20%;
     animation: glowing 2s;
-    display: none;
   }
 
 #created-name {
