--- a/assets/user-creation.css
+++ b/assets/user-creation.css
@@ -11,7 +11,6 @@ body {
   }
 
   .buttons {
-    background-color: rgba(13, 0, 32, 0.659);
     border-radius: 50px;
     display: flex;
     align-items: center;
@@ -20,6 +19,14 @@ body {
     gap: 5vw;
     margin-bottom: 1vh;
   }
+
+.buttons a {
+  transition: transform ease-in-out 0.5s
+}
+
+.buttons a:hover {
+  transform: scale(1.3);
+}
 
 
 .title h1 {
@@ -39,10 +46,11 @@ body {
   #all-content-hider {
     display: none;
     border-radius: 10%;
-    animation: glowing 4s;
+    animation: pulse2 5s infinite, glowing 4s;
     padding-top: 10px;
     padding-left: 100px;
     padding-right: 100px;
+    padding-bottom: 20px;
   }
 
 #created-name {
@@ -95,6 +103,30 @@ body {
   90% { outline: solid 48px #00ffe495; }
 
   100% { outline: solid 50px #00ffea95; }
+}
+
+@keyframes pulse2 {
+  0% { background-color: rgba(13, 0, 32, 0.5); }
+
+  10% { background-color: rgba(7, 0, 32, 0.55); }
+
+  20% {background-color: rgba(5, 0, 32, 0.6); }
+
+  30% { background-color: rgba(10, 0, 32, 0.65); }
+
+  40% { background-color: rgba(19, 0, 32, 0.7); }
+
+  50% { background-color: rgba(23, 0, 32, 0.75); }
+
+  60% { background-color: rgba(25, 0, 32, 0.7); }
+
+  70% { background-color: rgba(5, 0, 32, 0.65); }
+
+  80% { background-color: rgba(32, 0, 20, 0.6); }
+
+  90% { background-color: rgba(0, 15, 32, 0.55); }
+
+  100% { background-color: rgba(13, 0, 32, 0.5); }
 }
 
 
