--- a/assets/user-creation.css
+++ b/assets/user-creation.css
@@ -25,7 +25,15 @@ body {
   transition: transform ease-in-out 0.5s
 }
 
+#add-Btn {
+  transition: transform ease-in-out 0.5s
+}
+
 .buttons a:hover {
+  transform: scale(1.3);
+}
+
+#add-Btn:hover {
   transform: scale(1.3);
 }
 
@@ -39,7 +47,16 @@ body {
     color: white;
     text-align: center;
     display: none;
-    margin: 20%;
+    margin-top: 0;
+    margin: 15%;
+  }
+
+  #rocketGif {
+    position: absolute;
+    width: 20%;
+    left: 500px;
+    margin: 10%;
+    rotate: 30deg;
   }
 
   
